<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgapps"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <RelativeLayout
            android:layout_marginTop="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp">

            <TextView
                android:text="@string/currency_converter"
                android:textSize="40sp"
                android:textColor="#FFFFFF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/appTitle"
                android:layout_centerHorizontal="true"/>

            <ImageView
                android:layout_below="@id/appTitle"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@mipmap/moneybg3_foreground"
                android:contentDescription="@string/todo"
                android:textAlignment="center"
                android:layout_centerHorizontal="true"/>

        </RelativeLayout>

        <GridLayout
            android:rowCount="6"
            android:columnCount="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnOrderPreserved="false"
            android:alignmentMode="alignMargins"
            android:layout_marginTop="0dp">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1">



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="16dp"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/image1"
                        android:src="@mipmap/money"
                        android:layout_width="80dp"
                        android:layout_height="80dp"/>

                    <TextView
                        android:text="@string/jmd_conversions"
                        android:layout_marginTop="12dp"
                        android:textSize="18sp"
                        android:textColor="#6f6f6f"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>


            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1">



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="16dp"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/image2"
                        android:src="@mipmap/money"
                        android:layout_width="80dp"
                        android:layout_height="80dp"/>

                    <TextView
                        android:text="@string/usd_conversions"
                        android:layout_marginTop="12dp"
                        android:textSize="18sp"
                        android:textColor="#6f6f6f"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>


            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1">



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="16dp"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/image3"
                        android:src="@mipmap/money"
                        android:layout_width="80dp"
                        android:layout_height="80dp"/>

                    <TextView
                        android:text="@string/euro_conversions"
                        android:layout_marginTop="12dp"
                        android:textSize="18sp"
                        android:textColor="#6f6f6f"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>


            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1">



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="16dp"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/image4"
                        android:src="@mipmap/money"
                        android:layout_width="80dp"
                        android:layout_height="80dp"/>

                    <TextView
                        android:text="@string/can_conversions"
                        android:layout_marginTop="12dp"
                        android:textSize="18sp"
                        android:textColor="#6f6f6f"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>


            </androidx.cardview.widget.CardView>


        </GridLayout>


    </LinearLayout>








</ScrollView>

